@@ -59,6 +59,7 @@ enum {
 	COL_EDITABLE,
 	COL_TASK,
 	COL_COST,
+	COL_ASSIGNED_TO,
 	NUM_COLS
 };
 
